# advent24

./: .gitignore  CMakeLists.txt  README.md  main.cpp
input/: day01
solutions/: day_1.hpp  day_10.hpp  day_11.hpp  day_12.hpp  day_13.hpp  day_14.hpp  day_15.hpp  day_16.hpp  day_17.hpp  day_18.hpp  day_2.hpp  day_3.hpp  day_4.hpp  day_5.hpp  day_6.hpp  day_7.hpp  day_8.hpp  day_9.hpp  run_all_solutions.hpp  solution.hpp  utils.hpp
